crates/auto-lang/test/cookbook/errors/003_backtrace/backtrace.at
// Error handling demo
fn main() {
    let result = Err("something went wrong")
    is result {
        Ok(val) -> print(f"OK: ${val}"),
        Err(e) -> print(f"Error: ${e}")
    }
}
